fix bugs which added unnecessary sentences

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 <script src="ui.js"></script>
 <script src="util.js"></script>
+<script src="step1.js"></script>
+<script src="step2.js"></script>
+<script src="step3.js"></script>
+<script src="step4.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
