--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="step2.js"></script>
 <script src="step3.js"></script>
 <script src="step4.js"></script>
+<script src="step5.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
