--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <script src="ui.js"></script>
-<script src="util.js"></script>
+<script src="util/app-util.js"></script>
+<script src="../Util/util-dom.js"></script>
 <script src="step1.js"></script>
 <script src="step2.js"></script>
 <script src="step3.js"></script>
